--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+    <link rel="stylesheet" href="styles/portfolio.css">
     <title>Developer portfolio</title>
 
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <h2 class="nav-title">Mary</h2>
+            <ul>
+                <li>portfolio</li>
+                <li>blogs</li>
+                <li><button>Hire</button>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
