--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
           </div>
         </div>
       </section>
+      <!-- what i do section -->
+      <section class="">
+        <h3 class="section-title">What i do</h3>
+      </section>
     </main>
 
     <footer></footer>
