--- a/index.html
+++ b/index.html
@@ -70,11 +70,45 @@
         </div>
       </section>
       <!-- what i do section -->
-      <section class="">
+      <section class="what-i-do">
+
         <h3 class="section-title">What i do</h3>
+        <div class="skill-container">
+            <div class="skill">
+                <img src="images/icons/js.png" alt="">
+                <p class="skill-title">Vanilla JavaScript</p>
+                <p class="skill-discription">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Omnis optio eveniet corrupti, reiciendis dignissimos velit?</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/react.png" alt="">
+                <p class="skill-title">React</p>
+                <p class="skill-discription">Rerum, quo exercitationem id repellat architecto obcaecati voluptatum qui in excepturi minus. Fugit, aperiam qui.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/nodejs.png" alt="">
+                <p class="skill-title">Node JS</p>
+                <p class="skill-discription">Cumque distinctio repellat sequi cupiditate perferendis! Alias sit magni facilis natus. Facere minima optio voluptatibus!</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/mongo.png" alt="">
+                <p class="skill-title"> mongodb</p>
+                <p class="skill-discription">Earum neque quaerat quidem minus iusto molestiae, dolorem similique, nisi nemo minima exercitationem pariatur suscipit.</p>
+            </div>
+        </div>
+      </section>
+      <!-- Resume section -->
+      <section class="resume">
+        <h3  class="section-title">A Summary of My Resume</h3>
+        <div class="resume-content">
+            <div>
+
+            </div>
+        </div>
       </section>
     </main>
 
-    <footer></footer>
+    <footer>
+
+    </footer>
   </body>
 </html>
